# apps/docs/openapi.json
@@ -1723,6 +1723,11 @@
             ],
             "title": "Redactions"
           },
+          "sample": {
+            "type": "boolean",
+            "title": "Sample",
+            "default": false
+          },
           "error": {
             "anyOf": [
               {
@@ -1760,15 +1765,6 @@
             "type": "string",
             "title": "Name"
           },
-          "env": {
-            "type": "string",
-            "enum": [
-              "live",
-              "test"
-            ],
-            "title": "Env",
-            "default": "live"
-          },
           "owner": {
             "anyOf": [
               {
@@ -1779,8 +1775,18 @@
               }
             ],
             "title": "Owner"
+          },
+          "tier": {
+            "type": "string",
+            "enum": [
+              "live",
+              "first_party"
+            ],
+            "title": "Tier",
+            "default": "live"
           }
         },
+        "additionalProperties": false,
         "type": "object",
         "required": [
           "name"
@@ -1805,10 +1811,6 @@
             "type": "string",
             "title": "Name"
           },
-          "env": {
-            "type": "string",
-            "title": "Env"
-          },
           "tier": {
             "type": "string",
             "title": "Tier"
@@ -1820,7 +1822,6 @@
           "key",
           "prefix",
           "name",
-          "env",
           "tier"
         ],
         "title": "KeyCreatedResponse",
@@ -1839,10 +1840,6 @@
           "prefix": {
             "type": "string",
             "title": "Prefix"
-          },
-          "env": {
-            "type": "string",
-            "title": "Env"
           },
           "tier": {
             "type": "string",
@@ -1880,7 +1877,6 @@
           "id",
           "name",
           "prefix",
-          "env",
           "tier",
           "owner",
           "created_at",
